forth/test/fail/test_const_fold_div_zero.af
use' ../../lang.af
fun: test_const_fold_div_zero { -- out } 29 0 / end
